--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AJ Photography</title>
     <link rel="stylesheet" type=“text/css” href="/style.css">
-    <script src="/script.js"></script>
+    <script src="/script.js" type="text/javascript"></script>
 </head>
 <body>
     <header></header>
