--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <script src="/script.js" type="text/javascript"></script>
 </head>
 <body>
-    <header></header>
-    <main>main content</main>
-    <footer></footer>
+    <header id="header">header</header>
+    <main id="main">
+        <section class="intro">intro</section>
+        <section class="about">about</section>
+        <section class="asymetric-gallery">asymetric-gallery</section>
+        <section class="slider">slider</section>
+    </main>
+    <footer id="footer">footer</footer>
 </body>
 </html>
